--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     const sliderValue = slider.value;
 
     const data = [
-        ['Student No.', 'Grade (%)']
+        ['Name', 'Student No.', 'Grade (%)']
     ];
 
     Array.from({length: sliderValue}).forEach((_, i) => {
-      data.push([`Student${i + 1}`, '0']);
+      data.push(['Name', `Student${i + 1}`, '0']);
     });
 
     const csvContent = data.map(row => row.join(',')).join('\n');
