--- a/index.html
+++ b/index.html
@@ -198,6 +198,53 @@
 
       reader.readAsText(file);
     }
+
+
+
+    // Test Decrypt Function
+    function decryptCSV(csvContent, encryptedStudentNumber, key) {
+      // console.log("DecryptF");
+      const rows = csvContent.split('\n');
+      for (let i = 1; i < rows.length; i++) { 
+          let columns = rows[i].split(',');
+          if (columns.length > 1) {
+            console.log("True");
+            console.log(columns[0]);
+              const decryptedStudentNumber = CryptoJS.AES.decrypt(columns[0], key).toString(CryptoJS.enc.Utf8);
+              console.log(decryptedStudentNumber);
+              if (decryptedStudentNumber === encryptedStudentNumber) {
+                  return columns[0]; // Assuming grade is in the second column
+              }
+          }
+      }
+      return 'Student not found or decryption key incorrect.';
+    }
+
+    function decrypt() {
+      console.log("Decrypt");
+      const fileInput = document.getElementById('customFileB');
+      const encryptedStudentNumber = document.getElementById('studentsTextInputA').value;
+      const key = document.getElementById('studentsTextInputB').value;
+
+      console.log(encryptedStudentNumber);
+      console.log(key);
+
+      const file = fileInput.files[0];
+      const reader = new FileReader();
+
+      reader.onload = function(e) {
+          const csvData = e.target.result;
+          const grade = decryptCSV(csvData, encryptedStudentNumber, key);
+          document.getElementById('studentsOutput').textContent = 'Grade: ' + grade;
+          // console.log("Grade: " + grade)
+      };
+
+      if (file) {
+          reader.readAsText(file);
+      } else {
+          alert('Please select a CSV file.');
+      }
+    }
     </script>
 
     <div class="container">
@@ -240,7 +287,7 @@
                 <input type="text" class="form-control my-3 ml-1" id="studentsTextInputB" placeholder="Enter secret key/passphrase" />
               </div>
               <div class="d-flex justify-content-center">
-                <input type="submit" class="my-2 justify-content-center" id="studentsSubmit" value="Decrypt" onclick="retrieveGrade();" disabled>
+                <input type="submit" class="my-2 justify-content-center" id="studentsSubmit" value="Decrypt" onclick="decrypt();" disabled>
               </div>
             <hr class="my-12"/>
             <div id="studentsOutput" class="text-info"><p class="text-danger">Please fill out all required fields.</p></div>
