--- a/index.html
+++ b/index.html
@@ -288,18 +288,18 @@
         
         <!-- Website To-Do List -->
         <div class="container">
-          <div class="form-group row">
-            <label for="inputName" class="col-md-12 col-form-label"><b>**Website is still a work-in-progress (WIP)**</b></label>
-            <p>To-Do List:</p>
+          <div class="form-group row bg-dark">
+            <label for="inputName" class="col-md-12 col-form-label text-light"><b>**Website is still a work-in-progress (WIP)**</b></label>
+            <p class="mx-3 text-light">To-Do List:</p>
             <div class="col-md-5">
               <input name="packersOff" class="strikethrough" value="1" type="checkbox" checked>
-              <label for="packersOff" class="strikeTesto">Add Encrypt & Decrypt Functions</label><br>
+              <label for="packersOff" class="strikeTesto text-light">Add Encrypt & Decrypt Functions</label><br>
               
               <input name="packersOff" class="strikethrough" value="1" type="checkbox" >
-              <label for="packersOff" class="strikeTesto">Add more encryption algorithms</label><br>
+              <label for="packersOff" class="strikeTesto text-light">Add more encryption algorithms</label><br>
 
               <input name="packersOff" class="strikethrough" value="2" type="checkbox" >
-              <label for="packersOff" class="strikeTesto">Add a tutorial section</label>
+              <label for="packersOff" class="strikeTesto text-light">Add a tutorial section</label>
             </div>
           </div>
         </div>
