--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
               <label for="packersOff" class="strikeTesto text-light">Add more encryption algorithms</label><br>
 
               <input name="packersOff" class="strikethrough" value="2" type="checkbox" >
-              <label for="packersOff" class="strikeTesto text-light">Add a tutorial section</label>
+              <label for="packersOff" class="strikeTesto text-light">Add a tutorial section (in this container)</label>
             </div>
           </div>
         </div>
