--- a/index.html
+++ b/index.html
@@ -254,9 +254,6 @@
             <!-- Generate Sample CSV Function -->
             <button href="#collapso" type="button" class="btn btn-secondary btn-lg my-3" data-toggle="collapse">Generate Sample CSV</button>
             <div id="collapso" class="collapse border p-3 mb-2 bg-secondary text-white">
-              <!-- <label for="rangeCol" class="form-label">No. of Columns</label>
-              <input type="range" class="form-range ml-3" id="rangeCol" min="1" max="20" value="10">
-              <output id="outputCol"></output><br> -->
               <label for="rangeRow" class="form-label">No. of Students</label>
               <input type="range" class="form-range ml-3 mx-3" id="rangeRow" min="1" max="300" value="50" step="1">
               <output id="outputRow" class="font-weight-bold"></output><br>
@@ -295,6 +292,9 @@
               <input name="packersOff" class="strikethrough" value="1" type="checkbox" checked>
               <label for="packersOff" class="strikeTesto text-light">Add Encrypt & Decrypt Functions</label><br>
               
+              <input name="packersOff" class="strikethrough" value="1" type="checkbox" >
+              <label for="packersOff" class="strikeTesto text-light">Change 'Generate CSV' Label -> Text box</label><br>
+
               <input name="packersOff" class="strikethrough" value="1" type="checkbox" >
               <label for="packersOff" class="strikeTesto text-light">Add more encryption algorithms</label><br>
 
