--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
               <label for="packersOff" class="strikeTesto text-light">Add Encrypt & Decrypt Functions</label><br>
               
               <input name="packersOff" class="strikethrough" value="1" type="checkbox" >
-              <label for="packersOff" class="strikeTesto text-light">Change 'Generate CSV' Label -> Text box</label><br>
+              <label for="packersOff" class="strikeTesto text-light">Change 'Generate CSV' Label -> Text field</label><br>
 
               <input name="packersOff" class="strikethrough" value="1" type="checkbox" >
               <label for="packersOff" class="strikeTesto text-light">Add more encryption algorithms</label><br>
