--- a/index.html
+++ b/index.html
@@ -289,16 +289,16 @@
             <label for="inputName" class="col-md-12 col-form-label text-light"><b>**Website is still a work-in-progress (WIP)**</b></label>
             <p class="mx-3 text-light">To-Do List:</p>
             <div class="col-md-5">
-              <input name="packersOff" class="strikethrough" value="1" type="checkbox" checked>
+              <input name="packersOff" class="strikethrough" value="1" type="checkbox" checked disabled>
               <label for="packersOff" class="strikeTesto text-light">Add Encrypt & Decrypt Functions</label><br>
               
-              <input name="packersOff" class="strikethrough" value="1" type="checkbox" >
+              <input name="packersOff" class="strikethrough" value="1" type="checkbox" disabled>
               <label for="packersOff" class="strikeTesto text-light">Change 'Generate CSV' Label -> Text field</label><br>
 
-              <input name="packersOff" class="strikethrough" value="1" type="checkbox" >
+              <input name="packersOff" class="strikethrough" value="1" type="checkbox" disabled>
               <label for="packersOff" class="strikeTesto text-light">Add more encryption algorithms</label><br>
 
-              <input name="packersOff" class="strikethrough" value="2" type="checkbox" >
+              <input name="packersOff" class="strikethrough" value="2" type="checkbox" disabled>
               <label for="packersOff" class="strikeTesto text-light">Add a tutorial section (in this container)</label>
             </div>
           </div>
