--- a/index.html
+++ b/index.html
@@ -235,6 +235,20 @@
           alert('Please select a CSV file.');
       }
     }
+
+    function syncValues(source) {
+        var range = document.getElementById('rangeRow');
+        var number = document.getElementById('numberRow');
+        if (source.id === 'rangeRow') {
+            number.value = source.value;
+        } else {
+            range.value = source.value;
+        }
+        document.getElementById('outputRow').textContent = source.value;
+    }
+
+    document.getElementById('outputRow').textContent = document.getElementById('rangeRow').value;
+    document.getElementById('outputRow').textContent = document.getElementById('rangeRow').value;
     </script>
 
     <div class="container">
@@ -254,10 +268,11 @@
             <!-- Generate Sample CSV Function -->
             <button href="#collapso" type="button" class="btn btn-secondary btn-lg my-3" data-toggle="collapse">Generate Sample CSV</button>
             <div id="collapso" class="collapse border p-3 mb-2 bg-secondary text-white">
-              <label for="rangeRow" class="form-label">No. of Students</label>
-              <input type="range" class="form-range ml-3 mx-3" id="rangeRow" min="1" max="300" value="50" step="1">
-              <output id="outputRow" class="font-weight-bold"></output><br>
-              <button type="button" class="btn btn-outline-light" onclick="generateCSV();">Generate</button>
+                <label for="rangeRow" class="form-label">No. of Students</label>
+                <input type="range" class="form-range ml-3 mx-3" id="rangeRow" min="1" max="500" value="50" step="1" oninput="syncValues(this)">
+                <input type="number" class="form-control-inline ml-2" id="numberRow" min="1" max="500" value="50" step="1" oninput="syncValues(this)">
+                <output id="outputRow" class="font-weight-bold"></output><br>
+                <button type="button" class="btn btn-outline-light" onclick="generateCSV();">Generate</button>
             </div>
           </div>
 
@@ -293,7 +308,7 @@
               <label for="packersOff" class="strikeTesto text-light">Add Encrypt & Decrypt Functions</label><br>
               
               <input name="packersOff" class="strikethrough" value="1" type="checkbox" disabled>
-              <label for="packersOff" class="strikeTesto text-light">Change 'Generate CSV' Label -> Text field</label><br>
+              <label for="packersOff" class="strikeTesto text-light">Fix 'Generate CSV' Input Field Synchronization</label><br>
 
               <input name="packersOff" class="strikethrough" value="1" type="checkbox" disabled>
               <label for="packersOff" class="strikeTesto text-light">Add more encryption algorithms</label><br>
